<resources>
    <string name="app_name">I Am Iloilo dev</string>
    <string name="facebook_app_id">531753880368641</string>
    <string name="one">coupon</string>
    <string name="eight">EIGHT</string>
    <string name="five">Attractions</string>
    <string name="four">Hotels</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">Emergency</string>
    <string name="ten">TEN</string>
    <string name="three">Restaurants</string>
    <string name="two">News Feed</string>
    <string name="title_activity_scrollable_tabs">Scrollable Tabs</string>
    <string name="title_activity_simple_tabs">Simple Tabs</string>
    <string name="btn_simple_tabs">Simple Tabs</string>
    <string name="btn_scrollable_tabs">Scrollable Tabs</string>
    <string name="btn_icon_text_tabs">Icon &amp; Text Tabs</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="btn_pinned_top_tabs">Pinned To Top Tabs</string>
    <string name="title_activity_icon_text_tabs">Icon and Text Tabs</string>
    <string name="title_activity_icon_tabs">Icon Tabs</string>
    <string name="btn_custom_icon_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_custom_view_icon_text_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_pinned_top_tabs">Pin Top Tabs</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="sample_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget odio id metus pellentesque semper.</string>
    <string name="sample_title">Lorem ipsum</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">994164687306768</string>
    <string name="action_settings">Settings</string>
    <string name="wc_topbar_wc_guest">WELCOME GUEST!</string>
    <string name="wc_topbar_wc_tourist">WELCOME TOURIST!</string>
    <string name="wc_topbar_wc_john">WELCOME JOHN DOE!</string>
    <string name="wc_tourist_txt">TOURIST</string>
    <string name="wc_local_txt">LOCAL</string>
    <string name="wc_tourist_txt1">WELCOME TO ILOILO</string>
    <string name="wc_tourist_txt2">We are pleased to provide you with the following features:</string>
    <string name="wc_tourist_txt3">You may also add our other features:</string>
    <string name="wc_tourist_newsfeed_hint">News Feed</string>
    <string name="wc_tourist_attraction_hint">Attractions</string>
    <string name="wc_tourist_emergency_hint">Emergency Response</string>
    <string name="wc_tourist_hotel_hint">Hotels</string>
    <string name="wc_tourist_jobopprtunities_hint">Job Opportunities</string>
    <string name="wc_tourist_poll_hint">Poll</string>
    <string name="wc_tourist_terms_txt">I agree to the terms &amp; conditions</string>
    <string name="cancel_txt">CANCEL</string>
    <string name="wc_tourist_restaurant">Restaurants &amp; Delivery</string>
    <string name="next_txt">NEXT</string>
    <string name="dummy_dtl_txt">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
    <string name="news_txt">News</string>
    <string name="emergency_txt">Emergency</string>
    <string name="restaurant_txt">Restaurants</string>
    <string name="hotel_txt">Hotels</string>
    <string name="job_txt">Job Opportunities</string>
    <string name="polls_txt">Polls</string>
    <string name="attraction_txt">Attractions</string>
    <string name="stting_txt">Settings</string>
    <string name="resturant_amenities_txt">AMENITIES</string>
    <string name="txt_COMMENTS">COMMENTS</string>
    <string name="btn_send_location_emergency">SEND LOCATION</string>
    <string name="map_pin_msg_emergency">Please move the pin in where emergency is.</string>
    <string name="reported_by_txt">Reported by</string>
    <string name="category_txt">Category</string>
    <string name="detail_txt">Details</string>
    <string name="location_txt">Location</string>
    <string name="date_txt">Date</string>
    <string name="time_txt">Time</string>
    <string name="status_txt">Status</string>
    <string name="contact_txt">Contact No.</string>
    <string name="txt_term_of_use">Term of Use</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="hint_search_job">Search Job</string>
    <string name="graphics_artist_txt">Graphics Artist</string>
    <string name="job_description_txt">Job Description</string>
    <string name="qualification_txt">Qualification</string>
    <string name="company_name_txt">Company Name :</string>
    <string name="location_txt_job">Location :</string>
    <string name="category_name_txt_job">Category Name :</string>
    <string name="date_posted_txt_job">Date Posted :</string>
    <string name="year_of_experience_job">Year of experience :</string>
    <string name="salery_range_job">Salary Range :</string>
    <string name="dummy_str">Lorem ipsum dolor sit er elit lamet, consectetaur</string>
    <string name="txt_dont_have_account">Don\'t have account yet?</string>
    <string name="sign_up_for_free">SIGN UP FOR FREE</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="sign_in_btn">SIGN IN</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="login_txt">LOGIN</string>
    <string name="send_report_btn">SEND REPORT</string>
    <string name="DONE_btn">DONE</string>
    <string name="UPLOAD_JOB">UPLOAD JOB</string>
    <string name="txt_Forgot_Password_que">Forgot your password?</string>
    <string name="txt_PRIVACY_POLICY">PRIVACY POLICY</string>
    <string name="txt_HELP">HELP</string>
    <string name="txt_TERMS_OF_USE">TERMS OF USE</string>
    <string name="txt_ABOUT_THIS_APP">ABOUT THIS APP</string>
    <string name="txt_APP_NAME">APP NAME</string>
    <string name="txt_VERSION">VERSION</string>
    <string name="txt_Load_More">Load More...</string>
    <string name="txt_RATING_REVIEW">REVIEWS</string>
    <string name="txt_RATING_REVIEW_TTL">REVIEW</string>
    <string name="txt_RATING_COMMENT">COMMENTS</string>
    <string name="txt_RATING_COMMENT_TTL">COMMENT</string>
    <string name="txt_Write_a_comment">Write a comment</string>
    <string name="txt_Write_a_review">Write a review</string>
    <string name="txt_Post_Comment">Post Comment</string>
    <string name="txt_Post_Review">Post Review</string>
    <string name="txt_Enter_your_name">Enter your name</string>
    <string name="txt_Enter_your_email">Enter your email</string>
    <string name="txt_First_Name">First Name</string>
    <string name="txt_Last_Name">Last Name</string>
    <string name="txt_Mobile_Number">Mobile Number</string>
    <string name="txt_Birthday">Birth Date</string>
    <string name="txt_Email">Email Address</string>
    <string name="txt_Password">Password</string>
    <string name="txt_Confirm_Password">Confirm Password</string>
    <string name="txt_SAVE">SAVE</string>
    <string name="txt_Old_Password">Old Password</string>
    <string name="txt_New_Password">New Password</string>
    <string name="txt_EDIT_PROFILE">EDIT PROFILE</string>
    <string name="txt_Email_Address">Email Address</string>
    <string name="txt_Re_enter_Password">Re-enter Password</string>
    <string name="txt_agrees_terms_condition">I agree to the terms and conditions</string>
    <string name="txt_REGISTER">REGISTER</string>
    <string name="txt_REGISTER_AN_ACCOUNT">REGISTER AN ACCOUNT!</string>
    <string name="txt_Kindly_register_below">Kindly register below</string>
    <string name="txt_CHANGE_PASSWORD">CHANGE PASSWORD</string>
    <string name="txt_Unknown">Unknown</string>
    <string name="txt_No_Internet">Sorry, network is not available. Please try again later.</string>
    <string name="error_empty_email">Please Enter Email Address.</string>
    <string name="error_invalid_email">Email address format is not valid.</string>
    <string name="error_empty_password">Please Enter Password.</string>
    <string name="error_empty_new_password">Please Enter New Password.</string>
    <string name="error_empty_confirm_password">Please Enter Re-enter Password.</string>
    <string name="error_no_match_confirm_password">New password does not match the re-entered password.</string>
    <string name="error_empty_Firstname">Please Enter Firstname.</string>
    <string name="error_empty_Lastname">Please Enter Lastname.</string>
    <string name="error_empty_Mobilenumber">Please Enter Mobile Number.</string>
    <string name="error_empty_bithdate">Please Enter Birth-date.</string>
    <string name="txt_quit_confirm">Do you want to Quit?</string>
    <string name="txt_error_occurs">Sorry, network is not available. Please try again later.</string>
    <string name="error_empty_Address">Please Enter Address.</string>
    <string name="error_empty_city">Please Select City.</string>
    <string name="error_empty_mobile">Please Enter Mobile No.</string>
    <string name="error_invalid_mobile">Please enter valid mobile no. i.e. 09171229333</string>
    <string name="error_empty_name">Please Enter Name.</string>
</resources>