<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:weightSum="1">

        <ph.com.jeffreyvcabrera.iamiloilorecode.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_txt"
            android:textColor="@color/app_white"
            android:textSize="25sp"
            app:type="AntonioBold" />

        <LinearLayout
            android:id="@+id/linearLayoutLLEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:background="@drawable/login_user" />

            <EditText
                android:id="@+id/locallogin_edtEmail"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/cell_login"
                android:hint="@string/hint_email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutLLPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:background="@drawable/password_btn" />

            <EditText
                android:id="@+id/edt_passowrd_login"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/cell_login"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:singleLine="true" />
        </LinearLayout>

        <ph.com.jeffreyvcabrera.iamiloilorecode.utils.CustomTextView
            android:id="@+id/locallogin_singin"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/signin_btn"
            android:gravity="center"
            android:text="@string/sign_in_btn"
            android:textColor="@color/app_white"
            android:textSize="18sp"
            app:type="AntonioRegular" />

        <ph.com.jeffreyvcabrera.iamiloilorecode.utils.CustomTextView
            android:id="@+id/localLogin_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/dimen_15"
            android:text="@string/txt_Forgot_Password_que"
            android:textColor="@color/app_white"
            android:textSize="14sp"
            app:type="HelveticaLight" />

        <ph.com.jeffreyvcabrera.iamiloilorecode.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txt_dont_have_account"
            android:textColor="@color/app_white"
            android:textSize="18sp"
            app:type="HelveticaLight" />

        <ph.com.jeffreyvcabrera.iamiloilorecode.utils.CustomTextView
            android:id="@+id/locallogin_free_signinbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_15"
            android:gravity="center"
            android:text="@string/sign_up_for_free"
            android:textColor="@color/app_white"
            android:textSize="20sp"
            app:type="HelveticaNeueBold" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_15"
            android:src="@drawable/or_login" />

        <ImageButton
            android:id="@+id/locallogin_fb_signinbtn"
            android:layout_width="300dp"
            android:scaleType="fitXY"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:src="@drawable/facebook_btn" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:visibility="gone"/>
    </LinearLayout>

</RelativeLayout>